fixed price component bug on mobile view

--- a/src/styles/checkout-component.scss
+++ b/src/styles/checkout-component.scss
@@ -24,7 +24,7 @@
     }
 
     &__primary-title{
-        font-size: 30px;
+        font-size: 26px;
         font-weight: bold;
         transform: translate(10px, 20px);
     }
@@ -79,8 +79,8 @@
     }
 
     &__small-business-selection-primary-title{
-        font-size: 24px;
-        margin-bottom: 12px;
+        font-size: 22px;
+        margin-bottom: 16px;
         font-weight: bold;
     }
 
